// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic-type-error-0 1`] = `
Object {
  "errors": Array [
    "xfile
(1,7): error TS2322",
  ],
  "warnings": Array [],
}
`;

exports[`basic-type-error-1 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`basic-type-no-error-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`basic-type-no-error-1 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`check-file-until-error-fixed-0 1`] = `
Object {
  "errors": Array [
    "xfile
(1,7): error TS2322",
    "xfile
(1,7): error TS2322",
  ],
  "warnings": Array [],
}
`;

exports[`check-file-until-error-fixed-1 1`] = `
Object {
  "errors": Array [
    "xfile
(1,7): error TS2322",
  ],
  "warnings": Array [],
}
`;

exports[`check-file-until-error-fixed-2 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`check-interfaces-until-fixed-0 1`] = `
Object {
  "errors": Array [
    "xfile
(4,14): error TS2420",
  ],
  "warnings": Array [],
}
`;

exports[`check-interfaces-until-fixed-1 1`] = `
Object {
  "errors": Array [
    "xfile
(3,14): error TS2420",
    "xfile
(4,14): error TS2420",
  ],
  "warnings": Array [],
}
`;

exports[`check-interfaces-until-fixed-2 1`] = `
Object {
  "errors": Array [
    "xfile
(3,14): error TS2420",
  ],
  "warnings": Array [],
}
`;

exports[`check-interfaces-until-fixed-3 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`check-interfaces-until-fixed-4 1`] = `
Object {
  "errors": Array [
    "xfile
(3,14): error TS2420",
    "xfile
(4,14): error TS2420",
  ],
  "warnings": Array [],
}
`;

exports[`class-hierarchy-types-0 1`] = `
Object {
  "errors": Array [
    "xfile
(3,14): error TS2420",
    "xfile
(7,18): error TS2345",
    "xfile
(4,11): error TS2345",
  ],
  "warnings": Array [],
}
`;

exports[`class-hierarchy-types-1 1`] = `
Object {
  "errors": Array [
    "xfile
(7,18): error TS2345",
    "xfile
(4,11): error TS2345",
  ],
  "warnings": Array [],
}
`;

exports[`class-hierarchy-types-2 1`] = `
Object {
  "errors": Array [
    "xfile
(7,18): error TS2345",
  ],
  "warnings": Array [],
}
`;

exports[`class-hierarchy-types-3 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`css-modules-error-0 1`] = `
Object {
  "errors": Array [
    "xfile
(3,20): error TS2339",
  ],
  "warnings": Array [],
}
`;

exports[`css-modules-error-1 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`css-modules-no-error-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`css-modules-no-error-1 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`css-modules-removal-no-error-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`css-modules-removal-no-error-1 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`file-removal-no-error-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`file-removal-no-error-1 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`ignore-child-compiler-no-error-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`ignore-child-compiler-no-error-1 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`module-extension-type-definition-0 1`] = `
Object {
  "errors": Array [
    "xfile
(4,20): error TS2307",
    "xfile
(1,20): error TS2307",
    "xfile
(1,20): error TS2307",
  ],
  "warnings": Array [],
}
`;

exports[`module-extension-type-definition-1 1`] = `
Object {
  "errors": Array [
    "xfile
(4,20): error TS2307",
    "xfile
(1,20): error TS2307",
    "xfile
(1,20): error TS2307",
  ],
  "warnings": Array [],
}
`;

exports[`module-extension-type-definition-2 1`] = `
Object {
  "errors": Array [
    "xfile
(4,20): error TS2307",
    "xfile
(1,20): error TS2307",
    "xfile
(1,20): error TS2307",
  ],
  "warnings": Array [],
}
`;

exports[`module-extension-type-definition-3 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`module-extension-type-definition-4 1`] = `
Object {
  "errors": Array [
    "xfile
(2,20): error TS2307",
  ],
  "warnings": Array [],
}
`;

exports[`module-extension-type-definition-5 1`] = `
Object {
  "errors": Array [
    "xfile
(4,20): error TS2307",
    "xfile
(1,20): error TS2307",
    "xfile
(1,20): error TS2307",
  ],
  "warnings": Array [],
}
`;

exports[`module-extension-type-definition-6 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`react-components-0 1`] = `
Object {
  "errors": Array [
    "xfile
(11,17): error TS2339",
  ],
  "warnings": Array [],
}
`;

exports[`react-components-1 1`] = `
Object {
  "errors": Array [
    "xfile
(11,17): error TS2339",
    "xfile
(9,9): error TS2322",
    "xfile
(9,9): error TS2322",
    "xfile
(9,9): error TS2322",
  ],
  "warnings": Array [],
}
`;

exports[`react-components-2 1`] = `
Object {
  "errors": Array [
    "xfile
(11,17): error TS2339",
  ],
  "warnings": Array [],
}
`;

exports[`ts-dependency-only-error-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`ts-dependency-only-error-1 1`] = `
Object {
  "errors": Array [
    "xfile
(1,22): error TS2306",
  ],
  "warnings": Array [],
}
`;

exports[`ts-dependency-only-error-2 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`ts-dependency-only-error-3 1`] = `
Object {
  "errors": Array [
    "xfile
(3,22): error TS2420",
  ],
  "warnings": Array [],
}
`;

exports[`ts-dependency-only-removal-2-error-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`ts-dependency-only-removal-2-error-1 1`] = `
Object {
  "errors": Array [
    "xfile
(1,22): error TS2307",
  ],
  "warnings": Array [],
}
`;

exports[`ts-dependency-only-removal-2-error-2 1`] = `
Object {
  "errors": Array [
    "xfile
(3,22): error TS2420",
  ],
  "warnings": Array [],
}
`;

exports[`ts-dependency-only-removal-error-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`ts-dependency-only-removal-error-1 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`ts-dependency-only-removal-error-2 1`] = `
Object {
  "errors": Array [
    "xfile
(1,22): error TS2307",
  ],
  "warnings": Array [],
}
`;

exports[`tslint-error-0 1`] = `
Object {
  "errors": Array [
    "xfile
  2:11  error  ' should be \\"  quotemark
",
    "xfile
  4:11  error  ' should be \\"  quotemark
",
  ],
  "warnings": Array [],
}
`;

exports[`tslint-error-1 1`] = `
Object {
  "errors": Array [
    "xfile
  4:11  error  ' should be \\"  quotemark
",
  ],
  "warnings": Array [],
}
`;

exports[`tslint-error-2 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`tslint-warning-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [
    "xfile
  2:11  warning  ' should be \\"  quotemark
",
    "xfile
  4:11  warning  ' should be \\"  quotemark
",
  ],
}
`;

exports[`tslint-warning-1 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [
    "xfile
  4:11  warning  ' should be \\"  quotemark
",
  ],
}
`;

exports[`tslint-warning-2 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`type-patches-error-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`type-patches-error-1 1`] = `
Object {
  "errors": Array [
    "xfile
(1,22): error TS2307",
  ],
  "warnings": Array [],
}
`;

exports[`type-patches-error-2 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;
